# slurm-job-doctor

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  cli.md  diagnosis-rules.md  examples.md  roadmap.md
examples/gpu_not_used/: job.sbatch  sacct.csv  slurm-1004.out
examples/low_cpu_efficiency/: job.sbatch  sacct.csv  slurm-1003.out
examples/oom/: job.sbatch  sacct.csv  slurm-1001.err  slurm-1001.out
examples/timeout/: job.sbatch  sacct.csv  slurm-1002.err  slurm-1002.out
src/slurm_job_doctor/: __init__.py  analysis.py  cli.py  config.py
src/slurm_job_doctor/collectors/: __init__.py  command_runner.py  file_collector.py  sacct_collector.py
src/slurm_job_doctor/diagnosis/: __init__.py  context.py  cpu_efficiency.py  engine.py  environment.py  gpu.py  memory_efficiency.py  oom.py  patterns.py  state.py  timeout.py
src/slurm_job_doctor/models/: __init__.py  diagnosis.py  job_record.py  log_evidence.py  recommendation.py  report.py  sbatch_script.py
src/slurm_job_doctor/parsers/: __init__.py  log_parser.py  sacct_parser.py  sbatch_parser.py  unit_parser.py
src/slurm_job_doctor/patcher/: __init__.py  safety.py  sbatch_patcher.py
src/slurm_job_doctor/recommenders/: __init__.py  context.py  cpu.py  engine.py  gpu.py  memory.py  queue_impact.py  runtime.py  util.py
src/slurm_job_doctor/reporting/: __init__.py  json_report.py  markdown.py  terminal.py
tests/: test_cli.py  test_diagnosis_engine.py  test_log_parser.py  test_oom_diagnosis.py  test_pipeline.py  test_recommenders.py  test_sacct_parser.py  test_sbatch_parser.py  test_sbatch_patcher.py  test_timeout_diagnosis.py  test_unit_parser.py
