[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-job-doctor"
version = "0.1.0"
description = "Diagnose failed Slurm jobs, right-size resources, and generate patched sbatch scripts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Caleb Chandrasekar" }]
keywords = ["slurm", "hpc", "sbatch", "sacct", "diagnostics", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4.0", "joblib>=1.3.0"]
dashboard = ["streamlit>=1.35.0", "plotly>=5.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.8.0"]

[project.scripts]
slurm-doctor = "slurm_job_doctor.cli:app"

[project.urls]
Homepage = "https://github.com/calebjubal/slurm-job-doctor"
Repository = "https://github.com/calebjubal/slurm-job-doctor"
Issues = "https://github.com/calebjubal/slurm-job-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slurm_job_doctor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures embed long pipe-delimited sacct/sstat header lines verbatim.
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
